<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Frikiados Premium</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_shop">ShopActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_ranking">RankingActivity</string>
    <string name="title_category_mode">CategoryModeActivity</string>
    <string name="title_activity_challenge">ChallengeActivity</string>
    <string name="title_activity_one_player">Quien es el protagonista principal de Dragon Ball?</string>
    <string name="sincrofacebook">Sincronizar Facebook</string>
    <string name="cancelled">Cancelar</string>
    <string name="permission_not_granted">Permission Not Granted</string>
    <string name="ok">Ok</string>
    <string name="app_id">1584299265126161</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="continuar">Continuar</string>
    <string name="world1">World one</string>
    <string name="world2">World two</string>
    <string name="title_section3">World three</string>
    <string name="level1">1</string>
    <string name="level2">2</string>
    <string name="level3">3</string>
    <string name="level4">4</string>
    <string name="level5">5</string>
    <string name="level6">6</string>
    <string name="level7">7</string>
    <string name="level8">8</string>
    <string name="level9">9</string>
    <string name="level10">10</string>
    <string name="level11">11</string>
    <string name="level12">12</string>
    <string name="level13">13</string>
    <string name="level14">14</string>
    <string name="level15">15</string>
    <string name="level16">16</string>
    <string name="level17">17</string>
    <string name="level18">18</string>
    <string name="level19">19</string>
    <string name="level20">Boss</string>
    <string name="title_activity_boss_animation">BossAnimationActivity</string>
    <string name="frikiadosImage">Frikiados Image</string>
    <string name="frikiadosSettings">Settings</string>
    <string name="frikiadosFinishGame">Game Over</string>
    <string name="btnOnePlayerString">One Player</string>
    <string name="btnVsClassic">Vs Classic</string>
    <string name="btnCategoryMode">Category Mode</string>
    <string name="btnCredits">Credits</string>
    <string name="btnOtherApps">Other Apps</string>
    <string name="frikiadosLifes">x</string>
    <string name="frikiados_boss_comic">Soy el rey de los Comics. ¡Te espero en el ring!</string>
    <string name="frikiados_boss_manga">Me encanta el Manga. ¡Pierde contra mí y te devoraré¡</string>
    <string name="frikiados_boss_movies">Toda película tiene un final. ¡Este será el tuyo¡</string>
    <string name="frikiados_boss_videogames">El más viciado de Frikiados. ¡Esta es tu última partida¡</string>
    <string name="frikiados_boss_series">Me apasionan las series. ¡Dudo que puedas ganarme¡</string>
    <string name="frikiadosBossDefeated">Boss Defeated: </string>
    <string name="frikiadosScoreNormal">Score: </string>
    <string name="frikiadosTotalScore">Total Score: </string>
    <string name="frikiadosNickName">nickname</string>
    <string name="frikiadosEmail">email</string>
    <string name="frikiadosBirthday">Birthday: </string>
    <string name="frikiadosSex">Sex: </string>
    <string name="frikiadosBestScore">Best Score:</string>
    <string name="frkiadosUser">Nickname:</string>
    <string name="frikiadosVincular">Vincular Facebook</string>
    <string name="frikiadosDesvincular">Desvincular Facebook</string>
    <string name="btnSave">Guardar</string>
    <string name="frikiadosNumOfAnswerQuestions">Correct answers:</string>
    <string name="firstOwner">Javier Maniviesa</string>
    <string name="secondOwner">Steven Mañez</string>
    <string name="thirdOwner">Carles González</string>
    <string name="designSound">Diseño Sonido</string>
    <string name="ownerSound">Edgar Tarancón</string>
    <string name="specialCollaborations">Agradecimientos especiales</string>
    <string name="firstCollaboration">Hector Galbis</string>
    <string name="secondCollaboration">Carlos Guerra</string>
    <string name="socialNetwork">Redes Sociales</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="btnBoss">Fight</string>
    <string name="titleExit">¿Te rindes?</string>
    <string name="textExit">¡Pensaba que eras un auténtico Jedi!</string>
    <string name="exit">Salir</string>
    <string name="noexit">Continuar</string>
    <string name="ownerMusic1">Fran Dominguez</string>
    <string name="ownerMusic2">Hector Perez Rodrigo</string>
    <string name="proximamente">Coming soon</string>
    <string name="chooseCategory">Elija Categoría</string>
    <string name="textSpoiler">Cuidado!, puede contener spoilers</string>
    <string name="categoryManga">MANGA</string>
    <string name="categoryComic">COMIC</string>
    <string name="categorySeries">TV</string>
    <string name="categoryGames">VIDEOGAME</string>
    <string name="categoryFilms">FILM</string>
	<string name="textLoadingBBDD">Descargando preguntas!</string>
	<string name="textRate">Valora</string>
	<string name="textLater">Recordar más tarde</string>
	<string name="textDontLike">No me gusta</string>
	<string name="juego"> App Juego de tronos</string>
	<string name="enviarPregunta"> Envía tu pregunta</string>
</resources>