<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".SelectWorld" >

    <LinearLayout
        android:id="@+id/linearOpacity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00000000"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/linearRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_dialog"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/textPopUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rate"
                    android:contentDescription="@+id/frikiadosImage"
                    android:gravity="center" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/btnRate"
                        style="@style/text_category"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_height="40dp"
                        android:text="@string/textRate"
                        android:background="@drawable/background_btn_settings" />

                    <Button
                        android:id="@+id/btnLater"
                        style="@style/text_category"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_height="40dp"
                        android:text="@string/textLater"
                        android:background="@drawable/background_btn_settings" />

                    <Button
                        android:id="@+id/btnDontLike"
                        style="@style/text_category"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_height="40dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/textDontLike"
                        android:background="@drawable/background_btn_settings" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>